<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_app"
    tools:context=".view.onboarding.FirstScreenActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/womanInterviewFirstScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/candidate_interview_1" />

    <ImageView
        android:id="@+id/swipeDotFirstScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/swipe_dot_first_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/womanInterviewFirstScreen" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleFirstScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/acompanhe_seu_trabalho_e_veja_seu_resultado"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeDotFirstScreen" />

    <TextView
        android:id="@+id/descriptionFirstScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/lembre_se_de_manter_o_controle_de_suas_realiza_es_profissionais"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFirstScreen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipButtonFirstScreen"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nextButtonFirstScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFirstScreen" />

    <Button
        android:id="@+id/nextButtonFirstScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/black"
        android:text="@string/next"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skipButtonFirstScreen"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFirstScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>
